--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.cocosw:bottomsheet:1.+@aar'
+    compile 'com.specyci:residemenu:1.6+'
 
 }
