--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.cocosw:bottomsheet:1.+@aar'
     compile 'com.specyci:residemenu:1.6+'
+    compile 'com.github.nirhart:parallaxscroll:1.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
 
 }
