--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,23 @@
         <activity
             android:name=".WorkActivity"
             android:label="@string/title_activity_work"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="at.kropf.curriculumvitae.MainActivity" />
+        </activity>
+        <activity
+            android:name=".EduActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="at.kropf.curriculumvitae.MainActivity" />
+        </activity>
+        <activity
+            android:name=".SkillsActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
