--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.mcxiaoke.volley:library:1.0.18'
     compile 'com.google.android.gms:play-services:7.8.0'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+
 }
