--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile('de.keyboardsurfer.android.widget:crouton:1.8.5@aar') {
+        // exclusion is not necessary, but generally a good idea.
+        exclude group: 'com.google.android', module: 'support-v4'
+    }
 }
