--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
     <application
         android:name=".application.CurriculumVitaeApplication"
+        android:supportsRtl="false"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -40,7 +41,6 @@
         </activity>
         <activity
             android:name=".WorkActivity"
-            android:label="@string/title_activity_work"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" >
             <meta-data
@@ -76,7 +76,6 @@
         </activity>
         <activity
             android:name=".AboutActivity"
-            android:label="@string/title_activity_about"
             android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" >
             <meta-data
